# gs-fisica-inclinator3001

./: Cargo.toml  README.md
src/: accelerometer.rs  conversion.rs  lib.rs  main.rs
